
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct timeval {scalar_t__ tv_usec; int tv_sec; } ;
struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_port; int sin_family; int sin_zero; } ;
struct sockaddr {int dummy; } ;
typedef int linebuf ;
typedef int lastbuf ;
typedef int info_buf ;
typedef int fd_set ;


 int AF_INET ;
 unsigned char* CHECKELOG ;
 int EXIT_FAILURE ;
 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int INBUF ;
 int IPPROTO_TCP ;
 int LINEBUFSIZ ;
 char* MSGVER ;
 int NOTELOG ;
 int NPRINTINFO (int ) ;
 int PRINTINFO (char*,int) ;
 int SOCK_STREAM ;
 int SOL_SOCKET ;
 int SO_REUSEADDR ;
 int TIMEOUT ;
 unsigned char* VERSION_CHECKER ;
 int bzero (char*,int) ;
 int close (int) ;
 int connect (int,struct sockaddr*,int) ;
 int debug ;
 int err (int,int *) ;
 int exit (int) ;
 int fprintf (int ,char*) ;
 int get_host_ip (char*) ;
 int htons (unsigned short) ;
 int memset (int *,char,int) ;
 int perror (char*) ;
 int recv (int,char*,int,int ) ;
 int select (int,int *,int *,int *,struct timeval*) ;
 int send (int,unsigned char const*,int ,int ) ;
 int setsockopt (int,int ,int ,int*,int) ;
 int socket (int ,int ,int ) ;
 int stderr ;
 int strlen (unsigned char const*) ;
 int strncpy (char*,char*,int) ;
 char* strstr (char*,unsigned char const*) ;

void get_server_version(char *hostname,unsigned short port)
 {
   const unsigned char *version_chec = VERSION_CHECKER;
   const unsigned char *version_request = CHECKELOG;
   int yes = 1;
   int get_total = 0;
   int send_total = 0;
   char info_buf[INBUF];
   int sock_req;
   int ready;
   struct sockaddr_in rem_addr;
   fd_set read_fd;
   struct timeval w_t;

     w_t.tv_sec = TIMEOUT;
     w_t.tv_usec = 0;

   PRINTINFO(MSGVER,1);

           sock_req = socket(AF_INET,SOCK_STREAM,IPPROTO_TCP);
             if(sock_req < 0) {
             perror("socket");
             exit(EXIT_FAILURE);
             }
          if(setsockopt(sock_req,SOL_SOCKET,SO_REUSEADDR,&yes,sizeof(int)) == -1)
          { perror("setsockopt");
          exit(1);
          }

           memset(&(rem_addr.sin_zero),'\0',8);
           rem_addr.sin_family = AF_INET;
           rem_addr.sin_port = htons(port);
           rem_addr.sin_addr.s_addr = get_host_ip(hostname);

               if( connect(sock_req,(struct sockaddr *)&rem_addr,sizeof(struct sockaddr)) == -1)
                {
                err(1,((void*)0));
                exit(1);
                }

          FD_ZERO(&read_fd);
          FD_SET(sock_req,&read_fd);

               if ((send_total = send(sock_req,version_request,strlen(version_request),0)) == -1)
                {
                perror("send");
                exit(1);
                }
         if((ready = select(sock_req+1,&read_fd,(fd_set *)((void*)0),(fd_set *)((void*)0),&w_t)) < 0){
             perror("select");
             exit(1);
             }
         if(FD_ISSET(sock_req,&read_fd))
          {
               if( (get_total = recv(sock_req,info_buf,sizeof(info_buf)-1,0)) == -1)
                {
                perror("recv");
                exit(1);
                }
                  else if(get_total <= 0){
                  fprintf(stderr,"[-]Can not receive information\n");
                  exit(1);
                  }
          info_buf[get_total] = '\0';
          int i;
          char linebuf[LINEBUFSIZ];
          char lastbuf[LINEBUFSIZ];
          bzero(linebuf,sizeof(linebuf));
          bzero(lastbuf,sizeof(lastbuf));

          char *p = (char *)&linebuf[0];
          char *k = (char *)&lastbuf[0];

          char *z;
             if((z = strstr(info_buf,version_chec)) != ((void*)0))
              {
                strncpy(p,z,500);
                  for(i = 0; (*p != '-') && (*p != '\n'); i++){
                   *k++ = *p++;
                   }
              PRINTINFO(lastbuf,debug);
              close(sock_req);
              return;
              }
          }
           NPRINTINFO(NOTELOG);
           close(sock_req);
           exit(1);
 }
